--- a/M183.Blog/M183.Blog.csproj
+++ b/M183.Blog/M183.Blog.csproj
@@ -224,6 +224,10 @@
     <Compile Include="Migrations\201801141510197_AddUserBlock.Designer.cs">
       <DependentUpon>201801141510197_AddUserBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801162031546_AddPublishedFlagToPost.cs" />
+    <Compile Include="Migrations\201801162031546_AddPublishedFlagToPost.Designer.cs">
+      <DependentUpon>201801162031546_AddPublishedFlagToPost.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Metadata.cs" />
@@ -327,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801141510197_AddUserBlock.resx">
       <DependentUpon>201801141510197_AddUserBlock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801162031546_AddPublishedFlagToPost.resx">
+      <DependentUpon>201801162031546_AddPublishedFlagToPost.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
