--- a/M183.Blog/M183.Blog.csproj
+++ b/M183.Blog/M183.Blog.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\201801162031546_AddPublishedFlagToPost.Designer.cs">
       <DependentUpon>201801162031546_AddPublishedFlagToPost.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801171646223_AddUserloginDeletedDate.cs" />
+    <Compile Include="Migrations\201801171646223_AddUserloginDeletedDate.Designer.cs">
+      <DependentUpon>201801171646223_AddUserloginDeletedDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Metadata.cs" />
@@ -334,6 +338,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801162031546_AddPublishedFlagToPost.resx">
       <DependentUpon>201801162031546_AddPublishedFlagToPost.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801171646223_AddUserloginDeletedDate.resx">
+      <DependentUpon>201801171646223_AddUserloginDeletedDate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
